<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:text="@string/logo"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/font_size_medium"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_app_name"
            android:textStyle="bold|italic" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:scaleType="fitCenter"
            android:src="@drawable/man_1459246_1280"/>

        <Button
            android:id="@+id/start_app_button"
            style="@style/CustomButton"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:textSize="@dimen/font_size_medium"
            android:text="@string/login_screen_start"/>

    </LinearLayout>

    <com.example.planmyvacation.views.InfoView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        app:bubbleText="@string/login_screen_bubble_text" />

</RelativeLayout>