<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/recycler_view_results_row_searched_period_background"
    android:paddingTop="8dp"
    android:paddingBottom="10dp"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/label_searched_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_screen_searched_period"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_searched_period_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/results_screen_searched_period_start_date"/>

        <TextView
            android:id="@+id/searched_period_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="nesto"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_searched_period_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/results_screen_searched_period_end_date"/>

        <TextView
            android:id="@+id/searched_period_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="nesto"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_searched_period_vacation_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/results_screen_searched_period_number_of_vacation_days_to_use"/>

        <TextView
            android:id="@+id/searched_period_vacation_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="nesto"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/searched_period_vacation_periods_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/searched_period_vacation_days"
        android:orientation="vertical"/>

</LinearLayout>